Rewrote Dynamo tables all into one single table. phew... All tests pass. Needs more testing