@@ -3,32 +3,30 @@ package com.smotana.clearflask.store.impl;
 import com.amazonaws.services.dynamodbv2.AmazonDynamoDB;
 import com.amazonaws.services.dynamodbv2.document.AttributeUpdate;
 import com.amazonaws.services.dynamodbv2.document.DynamoDB;
-import com.amazonaws.services.dynamodbv2.document.ItemCollection;
 import com.amazonaws.services.dynamodbv2.document.PrimaryKey;
-import com.amazonaws.services.dynamodbv2.document.QueryOutcome;
-import com.amazonaws.services.dynamodbv2.document.Table;
 import com.amazonaws.services.dynamodbv2.document.TableKeysAndAttributes;
 import com.amazonaws.services.dynamodbv2.document.TableWriteItems;
+import com.amazonaws.services.dynamodbv2.document.spec.DeleteItemSpec;
+import com.amazonaws.services.dynamodbv2.document.spec.GetItemSpec;
+import com.amazonaws.services.dynamodbv2.document.spec.PutItemSpec;
 import com.amazonaws.services.dynamodbv2.document.spec.QuerySpec;
 import com.amazonaws.services.dynamodbv2.document.spec.UpdateItemSpec;
-import com.amazonaws.services.dynamodbv2.model.AttributeDefinition;
-import com.amazonaws.services.dynamodbv2.model.BillingMode;
-import com.amazonaws.services.dynamodbv2.model.CreateTableRequest;
-import com.amazonaws.services.dynamodbv2.model.KeySchemaElement;
-import com.amazonaws.services.dynamodbv2.model.KeyType;
+import com.amazonaws.services.dynamodbv2.document.utils.NameMap;
+import com.amazonaws.services.dynamodbv2.document.utils.ValueMap;
 import com.amazonaws.services.dynamodbv2.model.Put;
-import com.amazonaws.services.dynamodbv2.model.ResourceNotFoundException;
 import com.amazonaws.services.dynamodbv2.model.ReturnValue;
-import com.amazonaws.services.dynamodbv2.model.ScalarAttributeType;
-import com.amazonaws.services.dynamodbv2.model.TimeToLiveSpecification;
 import com.amazonaws.services.dynamodbv2.model.TransactWriteItem;
 import com.amazonaws.services.dynamodbv2.model.TransactWriteItemsRequest;
-import com.amazonaws.services.dynamodbv2.model.UpdateTimeToLiveRequest;
+import com.google.common.base.Charsets;
 import com.google.common.base.Strings;
 import com.google.common.collect.ImmutableCollection;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Iterables;
 import com.google.common.collect.Maps;
+import com.google.common.hash.HashFunction;
+import com.google.common.hash.Hashing;
 import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.SettableFuture;
@@ -37,17 +35,17 @@ import com.google.inject.AbstractModule;
 import com.google.inject.Inject;
 import com.google.inject.Module;
 import com.google.inject.Singleton;
-import com.google.inject.multibindings.Multibinder;
 import com.google.inject.name.Named;
 import com.google.inject.name.Names;
 import com.kik.config.ice.ConfigSystem;
 import com.kik.config.ice.annotations.DefaultValue;
 import com.smotana.clearflask.api.model.UserSearchAdmin;
 import com.smotana.clearflask.api.model.UserUpdate;
-import com.smotana.clearflask.core.ManagedService;
 import com.smotana.clearflask.store.UserStore;
-import com.smotana.clearflask.store.dynamo.mapper.CompoundPrimaryKey;
 import com.smotana.clearflask.store.dynamo.mapper.DynamoMapper;
+import com.smotana.clearflask.store.dynamo.mapper.DynamoMapper.IndexSchema;
+import com.smotana.clearflask.store.dynamo.mapper.DynamoMapper.TableSchema;
+import com.smotana.clearflask.store.dynamo.mapper.DynamoTable;
 import com.smotana.clearflask.store.elastic.ActionListeners;
 import com.smotana.clearflask.util.ElasticUtil;
 import com.smotana.clearflask.util.ElasticUtil.ConfigSearch;
@@ -58,7 +56,6 @@ import lombok.Builder;
 import lombok.NonNull;
 import lombok.Value;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.compress.utils.Lists;
 import org.elasticsearch.action.bulk.BulkRequest;
 import org.elasticsearch.action.bulk.BulkResponse;
 import org.elasticsearch.action.delete.DeleteRequest;
@@ -79,16 +76,20 @@ import org.elasticsearch.search.builder.SearchSourceBuilder;
 import org.elasticsearch.search.sort.SortOrder;
 
 import javax.ws.rs.core.Response;
+import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.StreamSupport;
+
+import static com.smotana.clearflask.store.dynamo.DefaultDynamoDbProvider.DYNAMO_WRITE_BATCH_MAX_SIZE;
+import static com.smotana.clearflask.store.dynamo.mapper.DynamoMapper.TableType.Primary;
 
 @Slf4j
 @Singleton
-public class DynamoElasticUserStore extends ManagedService implements UserStore {
+public class DynamoElasticUserStore implements UserStore {
 
     public interface Config {
         /** Intended for tests. Force immediate index refresh after write request. */
@@ -99,23 +100,24 @@ public class DynamoElasticUserStore extends ManagedService implements UserStore 
     @Value
     @Builder(toBuilder = true)
     @AllArgsConstructor
-    @CompoundPrimaryKey(key = "id", primaryKeys = {"type", "identifier"})
+    @DynamoTable(type = Primary, partitionKeys = {"identifierHash", "type", "projectId"}, sortStaticName = "userByIdentifier")
     public static class IdentifierUser {
-
         @NonNull
         private final String type;
 
         @NonNull
-        private final String identifier;
+        private final String identifierHash;
+
+        @NonNull
+        private final String projectId;
 
         @NonNull
         private final String userId;
     }
 
     private static final String USER_INDEX = "user";
-    private static final String USER_TABLE = "user";
-    private static final String IDENTIFIER_USER_TABLE = "identifierToUser";
-    private static final String SESSION_TABLE = "userSession";
+
+    private final HashFunction hashFunction = Hashing.murmur3_128(-223823442);
 
     @Inject
     private Config config;
@@ -137,60 +139,17 @@ public class DynamoElasticUserStore extends ManagedService implements UserStore 
     @Inject
     private Gson gson;
 
-    private Table userTable;
-    private Table identifierUserTable;
-    private Table sessionTable;
+    private TableSchema<UserModel> userSchema;
+    private TableSchema<IdentifierUser> identifierToUserIdSchema;
+    private TableSchema<UserSession> sessionByIdSchema;
+    private IndexSchema<UserSession> sessionByUserSchema;
 
-    @Override
-    protected void serviceStart() throws Exception {
-        try {
-            dynamo.createTable(new CreateTableRequest()
-                    .withTableName(USER_TABLE)
-                    .withKeySchema(ImmutableList.of(
-                            new KeySchemaElement().withAttributeName("id").withKeyType(KeyType.HASH)))
-                    .withAttributeDefinitions(ImmutableList.of(
-                            new AttributeDefinition().withAttributeName("id").withAttributeType(ScalarAttributeType.S)))
-                    .withBillingMode(BillingMode.PAY_PER_REQUEST));
-            log.debug("Table {} created", USER_TABLE);
-        } catch (ResourceNotFoundException ex) {
-            log.debug("Table {} already exists", USER_TABLE);
-        }
-        userTable = dynamoDoc.getTable(USER_TABLE);
-
-        try {
-            dynamo.createTable(new CreateTableRequest()
-                    .withTableName(IDENTIFIER_USER_TABLE)
-                    .withKeySchema(ImmutableList.of(
-                            new KeySchemaElement().withAttributeName("id").withKeyType(KeyType.HASH)))
-                    .withAttributeDefinitions(ImmutableList.of(
-                            new AttributeDefinition().withAttributeName("id").withAttributeType(ScalarAttributeType.S)))
-                    .withBillingMode(BillingMode.PAY_PER_REQUEST));
-            log.debug("Table {} created", IDENTIFIER_USER_TABLE);
-        } catch (ResourceNotFoundException ex) {
-            log.debug("Table {} already exists", IDENTIFIER_USER_TABLE);
-        }
-        identifierUserTable = dynamoDoc.getTable(IDENTIFIER_USER_TABLE);
-
-        try {
-            dynamo.createTable(new CreateTableRequest()
-                    .withTableName(SESSION_TABLE)
-                    .withKeySchema(ImmutableList.of(
-                            new KeySchemaElement().withAttributeName("id").withKeyType(KeyType.HASH),
-                            new KeySchemaElement().withAttributeName("sessionId").withKeyType(KeyType.RANGE)))
-                    .withAttributeDefinitions(ImmutableList.of(
-                            new AttributeDefinition().withAttributeName("id").withAttributeType(ScalarAttributeType.S),
-                            new AttributeDefinition().withAttributeName("sessionId").withAttributeType(ScalarAttributeType.S)))
-                    .withBillingMode(BillingMode.PAY_PER_REQUEST));
-            dynamo.updateTimeToLive(new UpdateTimeToLiveRequest()
-                    .withTableName(SESSION_TABLE)
-                    .withTimeToLiveSpecification(new TimeToLiveSpecification()
-                            .withEnabled(true)
-                            .withAttributeName("expiry")));
-            log.debug("Table {} created", SESSION_TABLE);
-        } catch (ResourceNotFoundException ex) {
-            log.debug("Table {} already exists", SESSION_TABLE);
-        }
-        sessionTable = dynamoDoc.getTable(SESSION_TABLE);
+    @Inject
+    private void setup() {
+        userSchema = dynamoMapper.parseTableSchema(UserModel.class);
+        identifierToUserIdSchema = dynamoMapper.parseTableSchema(IdentifierUser.class);
+        sessionByIdSchema = dynamoMapper.parseTableSchema(UserSession.class);
+        sessionByUserSchema = dynamoMapper.parseGlobalSecondaryIndexSchema(1, UserSession.class);
     }
 
     @Override
@@ -215,20 +174,23 @@ public class DynamoElasticUserStore extends ManagedService implements UserStore 
     }
 
     @Override
-    public UserAndIndexingFuture<IndexResponse> createUser(User user) {
+    public UserAndIndexingFuture<IndexResponse> createUser(UserModel user) {
         dynamo.transactWriteItems(new TransactWriteItemsRequest()
                 .withTransactItems(new TransactWriteItem().withPut(new Put()
-                        .withTableName(USER_TABLE)
-                        .withItem(dynamoMapper.toAttrMap(user))
-                        .withConditionExpression("attribute_not_exists(id)")))
-                .withTransactItems(getUserIdentifiers(user).entrySet().stream()
+                        .withTableName(userSchema.tableName())
+                        .withItem(userSchema.toAttrMap(user))
+                        .withConditionExpression("attribute_not_exists(#partitionKey)")
+                        .withExpressionAttributeNames(Map.of("#partitionKey", userSchema.partitionKeyName()))))
+                .withTransactItems(getUserIdentifierHashes(user).entrySet().stream()
                         .map(e -> new TransactWriteItem().withPut(new Put()
-                                .withTableName(IDENTIFIER_USER_TABLE)
-                                .withItem(dynamoMapper.toAttrMap(new IdentifierUser(
-                                        e.getKey(),
+                                .withTableName(identifierToUserIdSchema.tableName())
+                                .withItem(identifierToUserIdSchema.toAttrMap(new IdentifierUser(
+                                        e.getKey().getType(),
                                         e.getValue(),
+                                        user.getProjectId(),
                                         user.getUserId())))
-                                .withConditionExpression("attribute_not_exists(id)")))
+                                .withConditionExpression("attribute_not_exists(#partitionKey)")
+                                .withExpressionAttributeNames(Map.of("#partitionKey", identifierToUserIdSchema.partitionKeyName()))))
                         .toArray(TransactWriteItem[]::new)));
 
         SettableFuture<IndexResponse> indexingFuture = SettableFuture.create();
@@ -247,40 +209,37 @@ public class DynamoElasticUserStore extends ManagedService implements UserStore 
     }
 
     @Override
-    public Optional<User> getUser(String projectId, String userId) {
-        log.trace("getUser projectId {} userId {}", projectId, userId);
-        return Optional.ofNullable(dynamoMapper.fromItem(userTable.getItem("id", dynamoMapper.getCompoundPrimaryKey(ImmutableMap.of(
-                "projectId", projectId,
-                "userId", userId
-        ), User.class)), User.class));
+    public Optional<UserModel> getUser(String projectId, String userId) {
+        return Optional.ofNullable(userSchema.fromItem(userSchema.table().getItem(new GetItemSpec()
+                .withPrimaryKey(userSchema.primaryKey(Map.of(
+                        "projectId", projectId,
+                        "userId", userId))))));
     }
 
     @Override
-    public ImmutableMap<String, User> getUsers(String projectId, ImmutableCollection<String> userIds) {
-        return dynamoDoc.batchGetItem(new TableKeysAndAttributes(USER_TABLE).withHashOnlyKeys("id", userIds.stream()
-                .map(uid -> dynamoMapper.getCompoundPrimaryKey(ImmutableMap.of(
+    public ImmutableMap<String, UserModel> getUsers(String projectId, ImmutableCollection<String> userIds) {
+        return dynamoDoc.batchGetItem(new TableKeysAndAttributes(userSchema.tableName()).withPrimaryKeys(userIds.stream()
+                .map(userId -> userSchema.primaryKey(Map.of(
                         "projectId", projectId,
-                        "userId", uid), User.class))
-                .toArray()))
+                        "userId", userId)))
+                .toArray(PrimaryKey[]::new)))
                 .getTableItems()
                 .values()
                 .stream()
                 .flatMap(Collection::stream)
-                .map(i -> dynamoMapper.fromItem(i, User.class))
+                .map(userSchema::fromItem)
                 .collect(ImmutableMap.toImmutableMap(
-                        User::getUserId,
+                        UserModel::getUserId,
                         i -> i));
     }
 
     @Override
-    public Optional<User> getUserByIdentifier(String projectId, IdentifierType type, String identifier) {
-        return Optional.ofNullable(dynamoMapper.fromItem(
-                identifierUserTable.getItem(
-                        "id",
-                        dynamoMapper.getCompoundPrimaryKey(
-                                ImmutableMap.of("type", type.getType(), "identifier", identifier),
-                                IdentifierUser.class)),
-                IdentifierUser.class))
+    public Optional<UserModel> getUserByIdentifier(String projectId, IdentifierType type, String identifier) {
+        return Optional.ofNullable(identifierToUserIdSchema.fromItem(identifierToUserIdSchema.table().getItem(new GetItemSpec()
+                .withPrimaryKey(identifierToUserIdSchema.primaryKey(Map.of(
+                        "projectId", projectId,
+                        "type", type.getType(),
+                        "identifierHash", hashIdentifier(identifier)))))))
                 .map(identifierUser -> getUser(projectId, identifierUser.getUserId())
                         .orElseThrow(() -> new IllegalStateException("IdentifierUser entry exists but User doesn't for type " + type.getType() + " identifier " + identifier)));
     }
@@ -348,21 +307,20 @@ public class DynamoElasticUserStore extends ManagedService implements UserStore 
     @Override
     public UserAndIndexingFuture<UpdateResponse> updateUser(String projectId, String userId, UserUpdate updates) {
         UpdateItemSpec updateItemSpec = new UpdateItemSpec()
-                .withPrimaryKey("id", dynamoMapper.getCompoundPrimaryKey(ImmutableMap.of(
+                .withPrimaryKey(userSchema.primaryKey(Map.of(
                         "projectId", projectId,
-                        "userId", userId), User.class))
+                        "userId", userId)))
                 .withReturnValues(ReturnValue.ALL_NEW);
         Map<String, Object> indexUpdates = Maps.newHashMap();
         if (updates.getName() != null) {
-            updateItemSpec.addAttributeUpdate(new AttributeUpdate("name")
-                    .put(dynamoMapper.toDynamoValue(updates.getName())));
+            updateItemSpec.addAttributeUpdate(new AttributeUpdate("name").put(userSchema.toDynamoValue("name", updates.getName())));
             indexUpdates.put("name", updates.getName());
         }
         if (updates.getEmail() != null) {
             if (updates.getEmail().isEmpty()) {
                 updateItemSpec.addAttributeUpdate(new AttributeUpdate("email").delete());
             } else {
-                updateItemSpec.addAttributeUpdate(new AttributeUpdate("email").put(dynamoMapper.toDynamoValue(updates.getEmail())));
+                updateItemSpec.addAttributeUpdate(new AttributeUpdate("email").put(userSchema.toDynamoValue("email", updates.getEmail())));
             }
             indexUpdates.put("email", updates.getEmail());
         }
@@ -370,89 +328,88 @@ public class DynamoElasticUserStore extends ManagedService implements UserStore 
             if (updates.getPassword().isEmpty()) {
                 updateItemSpec.addAttributeUpdate(new AttributeUpdate("password").delete());
             } else {
-                updateItemSpec.addAttributeUpdate(new AttributeUpdate("password").put(dynamoMapper.toDynamoValue(updates.getPassword())));
+                updateItemSpec.addAttributeUpdate(new AttributeUpdate("password").put(userSchema.toDynamoValue("password", updates.getPassword())));
             }
         }
         if (updates.getEmailNotify() != null) {
-            updateItemSpec.addAttributeUpdate(new AttributeUpdate("emailNotify")
-                    .put(dynamoMapper.toDynamoValue(updates.getEmailNotify())));
+            updateItemSpec.addAttributeUpdate(new AttributeUpdate("emailNotify").put(userSchema.toDynamoValue("emailNotify", updates.getEmailNotify())));
         }
         if (updates.getIosPushToken() != null) {
             if (updates.getIosPushToken().isEmpty()) {
                 updateItemSpec.addAttributeUpdate(new AttributeUpdate("iosPushToken").delete());
             } else {
-                updateItemSpec.addAttributeUpdate(new AttributeUpdate("iosPushToken").put(dynamoMapper.toDynamoValue(updates.getIosPushToken())));
+                updateItemSpec.addAttributeUpdate(new AttributeUpdate("iosPushToken").put(userSchema.toDynamoValue("iosPushToken", updates.getIosPushToken())));
             }
         }
         if (updates.getAndroidPushToken() != null) {
             if (updates.getAndroidPushToken().isEmpty()) {
                 updateItemSpec.addAttributeUpdate(new AttributeUpdate("androidPushToken").delete());
             } else {
-                updateItemSpec.addAttributeUpdate(new AttributeUpdate("androidPushToken").put(dynamoMapper.toDynamoValue(updates.getAndroidPushToken())));
+                updateItemSpec.addAttributeUpdate(new AttributeUpdate("androidPushToken").put(userSchema.toDynamoValue("androidPushToken", updates.getAndroidPushToken())));
             }
         }
         if (updates.getBrowserPushToken() != null) {
             if (updates.getBrowserPushToken().isEmpty()) {
                 updateItemSpec.addAttributeUpdate(new AttributeUpdate("browserPushToken").delete());
             } else {
-                updateItemSpec.addAttributeUpdate(new AttributeUpdate("browserPushToken").put(dynamoMapper.toDynamoValue(updates.getBrowserPushToken())));
+                updateItemSpec.addAttributeUpdate(new AttributeUpdate("browserPushToken").put(userSchema.toDynamoValue("browserPushToken", updates.getBrowserPushToken())));
             }
         }
 
-        User user = dynamoMapper.fromItem(userTable.updateItem(updateItemSpec).getItem(), User.class);
+        UserModel userModel = userSchema.fromItem(userSchema.table().updateItem(updateItemSpec).getItem());
 
         if (!indexUpdates.isEmpty()) {
             SettableFuture<UpdateResponse> indexingFuture = SettableFuture.create();
-            elastic.updateAsync(new UpdateRequest(elasticUtil.getIndexName(USER_INDEX, projectId), user.getUserId())
+            elastic.updateAsync(new UpdateRequest(elasticUtil.getIndexName(USER_INDEX, projectId), userModel.getUserId())
                             .doc(gson.toJson(indexUpdates), XContentType.JSON)
                             .setRefreshPolicy(config.elasticForceRefresh() ? WriteRequest.RefreshPolicy.IMMEDIATE : WriteRequest.RefreshPolicy.WAIT_UNTIL),
                     RequestOptions.DEFAULT, ActionListeners.fromFuture(indexingFuture));
-            return new UserAndIndexingFuture<>(user, indexingFuture);
+            return new UserAndIndexingFuture<>(userModel, indexingFuture);
         } else {
-            return new UserAndIndexingFuture<>(user, Futures.immediateFuture(null));
+            return new UserAndIndexingFuture<>(userModel, Futures.immediateFuture(null));
         }
     }
 
     @Override
+    public UserAndIndexingFuture<UpdateResponse> updateUserBalance(String projectId, String userId, BigDecimal balanceDiff) {
+        UserModel userModel = userSchema.fromItem(userSchema.table().updateItem(new UpdateItemSpec()
+                .withPrimaryKey(userSchema.primaryKey(Map.of(
+                        "projectId", projectId,
+                        "userId", userId)))
+                .withAttributeUpdate(new AttributeUpdate("balance").addNumeric(balanceDiff))
+                .withReturnValues(ReturnValue.ALL_NEW))
+                .getItem());
+
+        SettableFuture<UpdateResponse> indexingFuture = SettableFuture.create();
+        elastic.updateAsync(new UpdateRequest(elasticUtil.getIndexName(USER_INDEX, projectId), userModel.getUserId())
+                        .doc(gson.toJson(Map.of("balance", userModel.getBalance())), XContentType.JSON)
+                        .setRefreshPolicy(config.elasticForceRefresh() ? WriteRequest.RefreshPolicy.IMMEDIATE : WriteRequest.RefreshPolicy.WAIT_UNTIL),
+                RequestOptions.DEFAULT, ActionListeners.fromFuture(indexingFuture));
+        return new UserAndIndexingFuture<>(userModel, indexingFuture);
+    }
+
+    @Override
     public ListenableFuture<BulkResponse> deleteUsers(String projectId, ImmutableCollection<String> userIds) {
-        ImmutableCollection<User> users = getUsers(projectId, userIds).values();
-        dynamoDoc.batchWriteItem(new TableWriteItems(USER_TABLE).withPrimaryKeysToDelete(users
-                .stream()
-                .map(User::getUserId)
-                .map(uid -> new PrimaryKey(
-                        "id",
-                        dynamoMapper.getCompoundPrimaryKey(ImmutableMap.of(
-                                "projectId", projectId,
-                                "userId", uid), User.class)))
+        ImmutableCollection<UserModel> users = getUsers(projectId, userIds).values();
+        dynamoDoc.batchWriteItem(new TableWriteItems(userSchema.tableName()).withPrimaryKeysToDelete(users.stream()
+                .map(userModel -> userSchema.primaryKey(Map.of(
+                        "projectId", projectId,
+                        "userId", userModel.getUserId())))
                 .toArray(PrimaryKey[]::new)));
 
-        List<PrimaryKey> identifierPrimaryKeys = Lists.newArrayList();
-        for (User user : users) {
-            if (!Strings.isNullOrEmpty(user.getEmail())) {
-                identifierPrimaryKeys.add(new PrimaryKey("id", dynamoMapper.getCompoundPrimaryKey(ImmutableMap.of(
-                        "type", IdentifierType.EMAIL.getType(),
-                        "identifier", user.getEmail()), IdentifierUser.class)));
-            }
-            if (!Strings.isNullOrEmpty(user.getAndroidPushToken())) {
-                identifierPrimaryKeys.add(new PrimaryKey("id", dynamoMapper.getCompoundPrimaryKey(ImmutableMap.of(
-                        "type", IdentifierType.ANDROID_PUSH.getType(),
-                        "identifier", user.getAndroidPushToken()), IdentifierUser.class)));
-            }
-            if (!Strings.isNullOrEmpty(user.getIosPushToken())) {
-                identifierPrimaryKeys.add(new PrimaryKey("id", dynamoMapper.getCompoundPrimaryKey(ImmutableMap.of(
-                        "type", IdentifierType.IOS_PUSH.getType(),
-                        "identifier", user.getIosPushToken()), IdentifierUser.class)));
-            }
-            if (!Strings.isNullOrEmpty(user.getBrowserPushToken())) {
-                identifierPrimaryKeys.add(new PrimaryKey("id", dynamoMapper.getCompoundPrimaryKey(ImmutableMap.of(
-                        "type", IdentifierType.BROWSER_PUSH.getType(),
-                        "identifier", user.getBrowserPushToken()), IdentifierUser.class)));
-            }
-        }
+        dynamoDoc.batchWriteItem(new TableWriteItems(identifierToUserIdSchema.tableName()).withPrimaryKeysToDelete(users.stream()
+                .map(this::getUserIdentifierHashes)
+                .map(ImmutableMap::entrySet)
+                .flatMap(Collection::stream)
+                .map(e -> identifierToUserIdSchema.primaryKey(Map.of(
+                        "projectId", projectId,
+                        "type", e.getKey().getType(),
+                        "identifierHash", e.getValue())))
+                .toArray(PrimaryKey[]::new)));
 
-        dynamoDoc.batchWriteItem(new TableWriteItems(IDENTIFIER_USER_TABLE).withPrimaryKeysToDelete(identifierPrimaryKeys.toArray(new PrimaryKey[0])));
-
-        users.forEach(user -> revokeSessions(projectId, user.getUserId()));
+        users.stream()
+                .map(UserModel::getUserId)
+                .forEach(userId -> revokeSessions(projectId, userId, Optional.empty()));
 
         SettableFuture<BulkResponse> indexingFuture = SettableFuture.create();
         elastic.bulkAsync(new BulkRequest()
@@ -466,106 +423,92 @@ public class DynamoElasticUserStore extends ManagedService implements UserStore 
     }
 
     @Override
-    public UserSession createSession(String projectId, String userId, Instant expiry) {
-        UserSession session = UserSession.builder()
-                .projectId(projectId)
-                .userId(userId)
-                .sessionId(genUserSessionId())
-                .expiry(expiry)
-                .build();
-        sessionTable.putItem(dynamoMapper.toItem(session));
-        return session;
+    public UserSession createSession(String projectId, String userId, long ttlInEpochSec) {
+        UserSession userSession = new UserSession(
+                genUserSessionId(),
+                projectId,
+                userId,
+                ttlInEpochSec);
+        sessionByIdSchema.table().putItem(new PutItemSpec()
+                .withItem(sessionByIdSchema.toItem(userSession)));
+        return userSession;
     }
 
     @Override
-    public Optional<UserSession> getSession(String projectId, String userId, String sessionId) {
-        Optional<UserSession> session = Optional.ofNullable(dynamoMapper.fromItem(
-                sessionTable.getItem(
-                        "id", dynamoMapper.getCompoundPrimaryKey(ImmutableMap.of(
-                                "projectId", projectId,
-                                "userId", userId), UserSession.class),
-                        "sessionId", sessionId),
-                UserSession.class));
-
-        if (session.isPresent() && session.get().getExpiry().isBefore(Instant.now())) {
-            log.trace("DynamoDB has an expired user session with expiry {}", session.get().getExpiry());
-            session = Optional.empty();
-        }
-
-        return session;
+    public Optional<UserSession> getSession(String sessionId) {
+        return Optional.ofNullable(sessionByIdSchema
+                .fromItem(sessionByIdSchema
+                        .table().getItem(new GetItemSpec().withPrimaryKey(sessionByIdSchema
+                                .primaryKey(Map.of("sessionId", sessionId))))))
+                .filter(userSession -> {
+                    if (userSession.getTtlInEpochSec() < Instant.now().getEpochSecond()) {
+                        log.debug("DynamoDB has an expired user session with expiry {}", userSession.getTtlInEpochSec());
+                        return false;
+                    }
+                    return true;
+                });
     }
 
     @Override
-    public UserSession refreshSession(String projectId, String userId, String sessionId, Instant expiry) {
-        return dynamoMapper.fromItem(sessionTable.updateItem(new UpdateItemSpec()
-                .withPrimaryKey(
-                        "id", dynamoMapper.getCompoundPrimaryKey(ImmutableMap.of(
-                                "projectId", projectId,
-                                "userId", userId), UserSession.class),
-                        "sessionId", sessionId)
-                .withAttributeUpdate(new AttributeUpdate("expiry")
-                        .put(dynamoMapper.toDynamoValue(expiry)))
+    public UserSession refreshSession(UserSession userSession, long ttlInEpochSec) {
+        return sessionByIdSchema.fromItem(sessionByIdSchema.table().updateItem(new UpdateItemSpec()
+                .withPrimaryKey(sessionByIdSchema.primaryKey(userSession))
+                .withConditionExpression("attribute_exists(#partitionKey)")
+                .withUpdateExpression("SET #ttlInEpochSec = :ttlInEpochSec")
+                .withNameMap(new NameMap()
+                        .with("#ttlInEpochSec", "ttlInEpochSec")
+                        .with("#partitionKey", sessionByIdSchema.partitionKeyName()))
+                .withValueMap(new ValueMap().withLong(":ttlInEpochSec", ttlInEpochSec))
                 .withReturnValues(ReturnValue.ALL_NEW))
-                .getItem(), UserSession.class);
+                .getItem());
     }
 
     @Override
-    public void revokeSession(String projectId, String userId, String sessionId) {
-        sessionTable.deleteItem(
-                "id", dynamoMapper.getCompoundPrimaryKey(ImmutableMap.of(
-                        "projectId", projectId,
-                        "userId", userId), UserSession.class),
-                "sessionId", sessionId);
+    public void revokeSession(UserSession userSession) {
+        sessionByIdSchema.table().deleteItem(new DeleteItemSpec()
+                .withPrimaryKey(sessionByIdSchema.primaryKey(userSession)));
     }
 
     @Override
-    public void revokeSessions(String projectId, String userId) {
-        revokeSessions(projectId, userId, Optional.empty());
+    public void revokeSessions(String projectId, String userId, Optional<String> sessionToLeaveOpt) {
+        Iterables.partition(StreamSupport.stream(sessionByUserSchema.index().query(new QuerySpec()
+                .withHashKey(sessionByUserSchema.partitionKey(Map.of(
+                        "userId", userId))))
+                .pages()
+                .spliterator(), false)
+                .flatMap(p -> StreamSupport.stream(p.spliterator(), false))
+                .map(sessionByUserSchema::fromItem)
+                .filter(session -> projectId.equals(session.getProjectId()))
+                .map(UserSession::getSessionId)
+                .filter(sessionId -> !sessionToLeaveOpt.isPresent() || !sessionToLeaveOpt.get().equals(sessionId))
+                .collect(ImmutableSet.toImmutableSet()), DYNAMO_WRITE_BATCH_MAX_SIZE)
+                .forEach(sessionIdsBatch -> {
+                    TableWriteItems tableWriteItems = new TableWriteItems(sessionByIdSchema.tableName());
+                    sessionIdsBatch.stream()
+                            .map(sessionId -> sessionByIdSchema.primaryKey(Map.of(
+                                    "sessionId", sessionId)))
+                            .forEach(tableWriteItems::addPrimaryKeyToDelete);
+                    dynamoDoc.batchWriteItem(tableWriteItems);
+                });
     }
 
-    @Override
-    public void revokeSessions(String projectId, String userId, String sessionToLeave) {
-        revokeSessions(projectId, userId, Optional.of(sessionToLeave));
+    private String hashIdentifier(String identifier) {
+        return hashFunction.hashString(identifier, Charsets.UTF_8).toString();
     }
 
-    private void revokeSessions(String projectId, String userId, Optional<String> sessionToLeaveOpt) {
-        String id = dynamoMapper.getCompoundPrimaryKey(ImmutableMap.of(
-                "projectId", projectId,
-                "userId", userId), UserSession.class);
-        ItemCollection<QueryOutcome> items = sessionTable.query(new QuerySpec()
-                .withMaxPageSize(25)
-                .withKeyConditionExpression("#i = :i")
-                .withNameMap(ImmutableMap.of("#i", "id"))
-                .withValueMap(ImmutableMap.of(":i", id)));
-        items.pages().forEach(page -> {
-            TableWriteItems tableWriteItems = new TableWriteItems(SESSION_TABLE);
-            page.forEach(item -> {
-                UserSession session = dynamoMapper.fromItem(item, UserSession.class);
-                if (sessionToLeaveOpt.isPresent() && sessionToLeaveOpt.get().equals(session.getSessionId())) {
-                    return;
-                }
-                tableWriteItems.addHashAndRangePrimaryKeyToDelete("id", id, "sessionId", session.getSessionId());
-            });
-            if (tableWriteItems.getPrimaryKeysToDelete() == null || tableWriteItems.getPrimaryKeysToDelete().size() <= 0) {
-                return;
-            }
-            dynamoDoc.batchWriteItem(tableWriteItems);
-        });
-    }
-
-    private ImmutableMap<String, String> getUserIdentifiers(User user) {
-        ImmutableMap.Builder<String, String> identifiersBuilder = ImmutableMap.builder();
+    private ImmutableMap<IdentifierType, String> getUserIdentifierHashes(UserModel user) {
+        ImmutableMap.Builder<IdentifierType, String> identifiersBuilder = ImmutableMap.builder();
         if (!Strings.isNullOrEmpty(user.getEmail())) {
-            identifiersBuilder.put(IdentifierType.EMAIL.getType(), user.getEmail());
+            identifiersBuilder.put(IdentifierType.EMAIL, hashIdentifier(user.getEmail()));
         }
         if (!Strings.isNullOrEmpty(user.getBrowserPushToken())) {
-            identifiersBuilder.put(IdentifierType.BROWSER_PUSH.getType(), user.getBrowserPushToken());
+            identifiersBuilder.put(IdentifierType.BROWSER_PUSH, hashIdentifier(user.getBrowserPushToken()));
         }
         if (!Strings.isNullOrEmpty(user.getAndroidPushToken())) {
-            identifiersBuilder.put(IdentifierType.ANDROID_PUSH.getType(), user.getAndroidPushToken());
+            identifiersBuilder.put(IdentifierType.ANDROID_PUSH, hashIdentifier(user.getAndroidPushToken()));
         }
         if (!Strings.isNullOrEmpty(user.getIosPushToken())) {
-            identifiersBuilder.put(IdentifierType.IOS_PUSH.getType(), user.getIosPushToken());
+            identifiersBuilder.put(IdentifierType.IOS_PUSH, hashIdentifier(user.getIosPushToken()));
         }
         return identifiersBuilder.build();
     }
@@ -575,7 +518,6 @@ public class DynamoElasticUserStore extends ManagedService implements UserStore 
             @Override
             protected void configure() {
                 bind(UserStore.class).to(DynamoElasticUserStore.class).asEagerSingleton();
-                Multibinder.newSetBinder(binder(), ManagedService.class).addBinding().to(DynamoElasticUserStore.class);
                 install(ConfigSystem.configModule(Config.class));
                 install(ConfigSystem.configModule(ConfigSearch.class, Names.named("user")));
             }
